--- a/mops.toml
+++ b/mops.toml
@@ -1,14 +1,20 @@
 [package]
-name = ""
+name = "url-kit"
 version = "0.0.1"
-description = ""
-repository = "https://github.com/edjcase/"
-keywords = [ ]
+description = "A library with Url helper utilities for parsing and manipulation"
+repository = "https://github.com/edjcase/motoko_url_kit"
+keywords = ["url", "query", "parse", "domain", "web"]
 license = "MIT"
 
 [dependencies]
 base = "0.14.9"
 new-base = "0.4.0"
+itertools = "0.2.2"
+xtended-text = "1.0.0"
+base-x-encoder = "1.1.0"
 
 [dev-dependencies]
 test = "2.1.1"
+
+[toolchain]
+moc = "0.14.10"
