--- a/mops.toml
+++ b/mops.toml
@@ -3,7 +3,7 @@ name = "url-kit"
 version = "0.0.1"
 description = "A library with Url helper utilities for parsing and manipulation"
 repository = "https://github.com/edjcase/motoko_url_kit"
-keywords = ["url", "query", "parse", "domain", "web"]
+keywords = [ "url", "query", "parse", "domain", "web" ]
 license = "MIT"
 
 [dependencies]
@@ -12,6 +12,7 @@ new-base = "0.4.0"
 itertools = "0.2.2"
 xtended-text = "1.0.0"
 base-x-encoder = "1.1.0"
+xtended-numbers = "0.4.0"
 
 [dev-dependencies]
 test = "2.1.1"
