--- a/mops.toml
+++ b/mops.toml
@@ -1,9 +1,9 @@
 [package]
 name = "url-kit"
-version = "0.0.2"
+version = "0.0.3"
 description = "A library with Url helper utilities for parsing and manipulation"
 repository = "https://github.com/edjcase/motoko_url_kit"
-keywords = ["url", "query", "parse", "domain", "web"]
+keywords = ["url", "query", "parse", "domain", "web", "encode"]
 license = "MIT"
 
 [dependencies]
