--- a/mops.toml
+++ b/mops.toml
@@ -1,21 +1,20 @@
 [package]
 name = "url-kit"
-version = "0.0.9"
+version = "1.0.0"
 description = "A library with Url helper utilities for parsing and manipulation"
 repository = "https://github.com/edjcase/motoko_url_kit"
 keywords = ["url", "query", "parse", "domain", "web", "encode"]
 license = "MIT"
 
 [dependencies]
-base = "0.14.9"
-new-base = "0.4.0"
-itertools = "0.2.2"
-xtended-text = "1.0.0"
-base-x-encoder = "1.1.0"
-xtended-numbers = "0.4.0"
+core = "0.6.0"
+xtended-text = "2.0.0"
+base-x-encoder = "2.0.0"
+xtended-numbers = "2.0.0"
+xtended-iter = "0.0.1"
 
 [dev-dependencies]
 test = "2.1.1"
 
 [toolchain]
-moc = "0.14.10"
+moc = "0.14.14"
