--- a/mops.toml
+++ b/mops.toml
@@ -1,20 +1,17 @@
 [package]
 name = "url-kit"
-version = "1.0.1"
+version = "1.1.0"
 description = "A library with Url helper utilities for parsing and manipulation"
 repository = "https://github.com/edjcase/motoko_url_kit"
 keywords = ["url", "query", "parse", "domain", "web", "encode"]
 license = "MIT"
 
 [dependencies]
-core = "0.6.0"
-xtended-text = "2.0.0"
-base-x-encoder = "2.0.0"
-xtended-numbers = "2.0.0"
-xtended-iter = "1.0.0"
+"core@1" = "1.0.0"
+"xtended-text@2" = "2.2.0"
+"base-x-encoder@2" = "2.1.0"
+"xtended-numbers@2" = "2.1.0"
+"xtended-iter@1" = "1.1.0"
 
 [dev-dependencies]
 test = "2.1.1"
-
-[toolchain]
-moc = "0.14.14"
